--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "this is an PWA",
-  "short_name": "Hi",
+  "short_name": "PWA",
   "icons": [{
-    "src": "icons/icon-128x128.png",
-      "sizes": "128x128",
+    "src": "icons/icon-116x92.png",
+      "sizes": "116x92",
       "type": "image/png"
     }
   ],
