--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,26 @@
 {
   "name": "this is an PWA",
-  "short_name": "PWA",
+  "short_name": "Hi",
   "icons": [{
-    "src": "icons/icon-116x92.png",
-      "sizes": "116x92",
+    "src": "icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    }, {
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }, {
+      "src": "icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    }, {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
